Changed absolute path

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section>
             <h2>Images</h2>
             <figure>
-                <img class=mainimg src="file:///C:/Users/dell/Desktop/College/PROG1245/Assignment/Assignment/images/APJ%20Abdul%20Kalam2.jpg" alt="Abdul Kalam giving a lecture" height="270" width="480">
+                <img class=mainimg src="https://raw.githubusercontent.com/albymbruse/assignment1/master/images/APJ%20Abdul%20Kalam2.jpg" alt="Abdul Kalam giving a lecture" height="270" width="480">
                 <figcaption>Abdul Kalam giving a lecture</figcaption>
             </figure>
             <figure>
