--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <br>
         <br>
         <section>
+            <h2>Table</h2>
             <table>
                 <thead>
                     <tr>
