--- a/gallery.html
+++ b/gallery.html
@@ -22,28 +22,30 @@
         <a href="contact.html">Contact Us</a>
 
     </nav>
-    <main>
-        <div class="imagegrid">
-            <img src="images/Kalam.jpeg" alt=" Abdul Kalam in a conference">
-            <img src="images/Kalambook.jpeg" alt="Abdul Kalam Book">
-            <img src="images/Kalamfront.jpeg" alt="Abdul Kalam during speech">
-            <img src="images/KalamOld.jpeg" alt="Abdul Kalam in his old age">
-            <img src="images/KalamSpeech.jpeg" alt="Abdul Kalam giving a speech">
-            <img src="images/APJ Abdul Kalam 1.png" alt="Abdul Kalam facing an audience" >
-            <img src="images/APJ Abdul Kalam2.jpg" alt="Abdul Kalam">
-            <img src="images/Kalamside.jpeg" alt="Abdul Kalam from the side">
-            <img src="images/Kalamsmile.jpeg" alt="Abdul Kalam smiling">
-        </div>
+    <section class="mainbody">
+        <main>
+            <div class="imagegrid">
+                <img src="images/Kalam.jpeg" alt=" Abdul Kalam in a conference">
+                <img src="images/Kalambook.jpeg" alt="Abdul Kalam Book">
+                <img src="images/Kalamfront.jpeg" alt="Abdul Kalam during speech">
+                <img src="images/KalamOld.jpeg" alt="Abdul Kalam in his old age">
+                <img src="images/KalamSpeech.jpeg" alt="Abdul Kalam giving a speech">
+                <img src="images/APJ Abdul Kalam 1.png" alt="Abdul Kalam facing an audience" >
+                <img src="images/APJ Abdul Kalam2.jpg" alt="Abdul Kalam">
+                <img src="images/Kalamside.jpeg" alt="Abdul Kalam from the side">
+                <img src="images/Kalamsmile.jpeg" alt="Abdul Kalam smiling">
+            </div>
 
-    </main>
-    <aside>
-        <h2>Additional Information</h2>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
-            <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
-            <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
-        </ul>
-    </aside>
+        </main>
+        <aside>
+            <h2>Additional Information</h2>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
+                <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
+                <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
+            </ul>
+        </aside>
+    </section>
     <footer class="headfoot">
         <p>&copy Alby Mathews Bruse 2024</p>
     </footer>
