--- a/media.html
+++ b/media.html
@@ -22,19 +22,21 @@
         <a href="contact.html">Contact Us</a>
 
     </nav>
-    <main>
-        <div class="mediacontainer">
-            <iframe height="100%" width="100%" src="https://www.youtube.com/embed/RJj7bUflNMM?si=M0UcEyRKJWuLy9y_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    </main>
-    <aside>
-        <h2>Additional Information</h2>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
-            <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
-            <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
-        </ul>
-    </aside>
+    <section class="mainbody">
+        <main>
+            <section class="mediacontainer">
+                <iframe height="100%" width="100%" src="https://www.youtube.com/embed/RJj7bUflNMM?si=M0UcEyRKJWuLy9y_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </section>
+        </main>
+        <aside>
+            <h2>Additional Information</h2>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
+                <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
+                <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
+            </ul>
+        </aside>
+    </section>
     <footer class="headfoot">
         <p>&copy Alby Mathews Bruse 2024</p>
     </footer>
