--- a/contact.html
+++ b/contact.html
@@ -22,56 +22,58 @@
         <a href="contact.html">Contact Us</a>
 
     </nav>
-    <main>
-        <form>
-            <div>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="username" required>
-            </div>
-            <br>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="useremail" required>
-            </div>
-            <br>
-            <div>
-                <label for="date">Date:</label>
-                <input type="date" id="date" name="date" required>
-            </div>
-            <br>
-            <div>
-                <label for="help">What do you need help with?</label>
-                <select name="select" id="help">
-                    <option value="default">Select Option</option>
-                    <option value="Suggestion">Suggestion for website</option>
-                    <option value="Donate">Donate to charity</option>
-                    <option value="Information">Get more Information</option>
-                </select>
-            </div>
-            <br>
-            <div>
-                <label for="comments">Comments</label>
-                <textarea name="comment" id="comments" cols="30" rows="4"></textarea>
-            </div>
-            <br>
-            <div>
-                <label for="human">I am a human</label>
-                <input type="checkbox" id="human" name="human" value="true">
-            </div>
-            <br>
-            <div>
-                <input type="submit" id="submit" value="Submit">
-            </div>
-        </form>
-    </main>
-    <aside>
-        <h2>Additional Information</h2>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
-            <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
-            <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
-        </ul>
-    </aside>
+    <section class="mainbody">
+        <main>
+            <form>
+                <div>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="username" required>
+                </div>
+                <br>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="useremail" required>
+                </div>
+                <br>
+                <div>
+                    <label for="date">Date:</label>
+                    <input type="date" id="date" name="date" required>
+                </div>
+                <br>
+                <div>
+                    <label for="help">What do you need help with?</label>
+                    <select name="select" id="help">
+                        <option value="default">Select Option</option>
+                        <option value="Suggestion">Suggestion for website</option>
+                        <option value="Donate">Donate to charity</option>
+                        <option value="Information">Get more Information</option>
+                    </select>
+                </div>
+                <br>
+                <div>
+                    <label for="comments">Comments</label>
+                    <textarea name="comment" id="comments" cols="30" rows="4"></textarea>
+                </div>
+                <br>
+                <div>
+                    <label for="human">I am a human</label>
+                    <input type="checkbox" id="human" name="human" value="true">
+                </div>
+                <br>
+                <div>
+                    <input type="submit" id="submit" value="Submit">
+                </div>
+            </form>
+        </main>
+        <aside>
+            <h2>Additional Information</h2>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
+                <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
+                <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
+            </ul>
+        </aside>
+    </section>
     <footer class="headfoot">
         <p>&copy Alby Mathews Bruse 2024</p>
     </footer>
