--- a/index.html
+++ b/index.html
@@ -22,64 +22,66 @@
         <a href="contact.html">Contact Us</a>
 
     </nav>
-    <main>
-        <section>
+    <section class="mainbody">
+        <main>
             <h2>Biography</h2>
-            <img class=mainimg src="images/APJ Abdul Kalam 1.png" alt="Abdul Kalam smiling">
-            <p><strong>A.P.J. Abdul Kalam</strong> (<em>born October 15, 1931, Rameswaram, India—died July 27, 2015, Shillong</em>) was an Indian scientist and politician who played a leading role in the development of India's missile and nuclear weapons programs.He was president of India from 2002 to 2007. Kalam earned a degree in aeronautical engineering from the Madras Institute of Technology and in 1958 joined the Defence Research and Development Organisation (DRDO). In 1969 he moved to the Indian Space Research Organisation, where he was project director of the SLV-III, the first satellite launch vehicle that was both designed and produced in India. Rejoining DRDO in 1982, Kalam planned the program that produced a number of successful missiles, which helped earn him the nickname “Missile Man.” Among those successes was Agni, India's first intermediate-range ballistic missile, which incorporated aspects of the SLV-III and was launched in 1989.</p>
-        </section>
-        <br>
-        <br>
-        <section>
-            <h2>Table</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Year of award or honour</th>
-                        <th>Name of award or honour</th>
-                        <th>Awarding organisation</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>2014</td>
-                        <td>Honorary professor</td>
-                        <td>Beijing University, China</td>
-                    </tr>
-                    <tr>
-                        <td>2014
-                        </td>
-                        <td>Doctor of Science</td>
-                        <td>Edinburgh University, UK</td>
-                    </tr>
-                    <tr>
-                        <td>2012</td>
-                        <td>Doctor of Laws </td>
-                        <td>Simon Fraser University</td>
-                    </tr>
-                    <tr>
-                        <td>2010</td>
-                        <td>Doctor of Engineering</td>
-                        <td>University of Waterloo</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-        <br>
-        <section>
-            <h2>Quotes</h2>
-            <q cite="https://www.forbesindia.com/article/explainers/apj-abdul-kalam-quotes/86465/1">Dream is not that which you see while sleeping it is something that does not let you sleep.</q>
-        </section>
+            <section class="bio">
+                <img class=mainimg src="images/kalambio.jpeg" alt="Abdul Kalam smiling">
+                <p><strong>A.P.J. Abdul Kalam</strong> (<em>born October 15, 1931, Rameswaram, India—died July 27, 2015, Shillong</em>) was an Indian scientist and politician who played a leading role in the development of India's missile and nuclear weapons programs.He was president of India from 2002 to 2007. Kalam earned a degree in aeronautical engineering from the Madras Institute of Technology and in 1958 joined the Defence Research and Development Organisation (DRDO). In 1969 he moved to the Indian Space Research Organisation, where he was project director of the SLV-III, the first satellite launch vehicle that was both designed and produced in India. Rejoining DRDO in 1982, Kalam planned the program that produced a number of successful missiles, which helped earn him the nickname “Missile Man.” Among those successes was Agni, India's first intermediate-range ballistic missile, which incorporated aspects of the SLV-III and was launched in 1989.</p>
+            </section>
+            <br>
+            <br>
+            <section>
+                <h2>Awards</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Year of award or honour</th>
+                            <th>Name of award or honour</th>
+                            <th>Awarding organisation</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>2014</td>
+                            <td>Honorary professor</td>
+                            <td>Beijing University, China</td>
+                        </tr>
+                        <tr>
+                            <td>2014
+                            </td>
+                            <td>Doctor of Science</td>
+                            <td>Edinburgh University, UK</td>
+                        </tr>
+                        <tr>
+                            <td>2012</td>
+                            <td>Doctor of Laws </td>
+                            <td>Simon Fraser University</td>
+                        </tr>
+                        <tr>
+                            <td>2010</td>
+                            <td>Doctor of Engineering</td>
+                            <td>University of Waterloo</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <br>
+            <section>
+                <h2>Quotes</h2>
+                <q cite="https://www.forbesindia.com/article/explainers/apj-abdul-kalam-quotes/86465/1">Dream is not that which you see while sleeping it is something that does not let you sleep.</q>
+            </section>
 
-    </main>
-    <aside>
-        <h2>Additional Information</h2>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
-            <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
-            <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
-        </ul>
-    </aside>
+        </main>
+        <aside>
+            <h2>Additional Information</h2>
+            <ul>
+                <li><a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a></li>
+                <li><a href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam" target="_blank">Brittanica</a></li>
+                <li><a href="https://www.presidentofindia.gov.in/abdulkalam/" target="_blank">President Of India</a></li>
+            </ul>
+        </aside>
+    </section>
     <footer class="headfoot">
         <p>&copy Alby Mathews Bruse 2024</p>
     </footer>
